<resources>
    <string name="app_name">BayBucket</string>

    <string name="see_all"><u>See All</u></string>

    <string name="title_activity_home">Home</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">Points : 183</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Memories</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_profile">Profile</string>
    <string name="leaderboard">Leaderboard</string>
    <string name="account">Edit Account</string>
    <string name="loremIpsum">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry\'s standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.</string>
    <string name="description">Description</string>
    <string name="rating">Rating:</string>
    <string name="cancel">Cancel</string>
    <string name="submit">Submit</string>
    <string name="i_m_here">I\'M HERE</string>
    <string name="bucket_list_page_heading">Bucket List</string>
    <string name="bucket_list_page_img_desc">Main image</string>
    <string name="logout">Logout</string>
    <string name="app_label">Bay-Bucket</string>
    <string name="search_hint">Search Locations</string>
    <string name="action_search">Search</string>
</resources>