<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.baybucket.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />
    <fragment
        android:id="@+id/nav_profile"
        android:name="com.example.baybucket.ui.profile.ProfileFragment"
        android:label="@string/menu_profile"
        tools:layout="@layout/fragment_profile" />
    <fragment
        android:id="@+id/nav_gallery"
        android:name="com.example.baybucket.ui.memory_gallery.MemoryGalleryFragment"
        android:label="@string/menu_gallery"
        tools:layout="@layout/fragment_memory_gallery" />
    <fragment
        android:id="@+id/nav_leaderboard"
        android:name="com.example.baybucket.ui.leaderboard.LeaderboardFragment"
        android:label="@string/leaderboard"
        tools:layout="@layout/fragment_leaderboard" />
    <fragment
        android:id="@+id/nav_slideshow"
        android:name="com.example.baybucket.ui.slideshow.SlideshowFragment"
        android:label="@string/menu_slideshow"
        tools:layout="@layout/fragment_slideshow" />

</navigation>