<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/home"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_profile"
            android:icon="@drawable/baseline_account_circle_18"
            android:title="@string/profile" />
        <item
            android:id="@+id/nav_gallery"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/menu_gallery" />
        <item
            android:id="@+id/nav_leaderboard"
            android:icon="@drawable/baseline_leaderboard_24"
            android:title="@string/leaderboard" />
        <item
            android:id="@+id/nav_account"
            android:icon="@drawable/baseline_manage_accounts_20"
            android:title="@string/account" />
    </group>
</menu>