<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".DestinationCheckInActivity"
    android:background="@color/light_green_background">

    <TextView
        android:id="@+id/check_in_destination"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Check in at Destination"
        android:textSize="25sp"
        android:textColor="@color/black"
        android:textAlignment="center"
        android:layout_gravity="center"
        android:layout_margin="10dp"
        />

    <ImageView
        android:id="@+id/check_in_image_view"
        android:layout_width="match_parent"
        android:layout_height="350dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="5dp"
        android:src="@drawable/default_image"
        />

    <Button
        android:id="@+id/take_image_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:layout_gravity="center"
        android:text="take photo"
        android:textSize="23sp"
        android:textColor="@color/white"/>

<!--    <Button-->
<!--        android:id="@+id/pick_image_button"-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:text="pick photo"-->
<!--        android:textSize="30sp"-->
<!--        android:textColor="@color/black"/>-->

    <EditText
        android:id="@+id/description_edit_text"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_margin="10dp"
        android:hint="@string/description"
        android:layout_span="2"
        android:layout_weight="1"
        android:gravity="top"
        android:textSize="20sp"
        android:background="@color/white"/>

   <LinearLayout
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:orientation="horizontal"
       android:layout_marginBottom="10dp">

       <Button
           android:id="@+id/button_cancel"
           android:layout_height="wrap_content"
           android:layout_width="wrap_content"
           android:text="@string/cancel"
           android:layout_column="1"
           android:layout_weight="2"
           android:backgroundTint="@color/light_gray"
           android:layout_marginLeft="10dp"
           android:layout_marginRight="5dp"
           style="?android:attr/buttonBarButtonStyle" />

       <Button
           android:id="@+id/button_submit"
           android:layout_height="wrap_content"
           android:layout_width="wrap_content"
           android:text="@string/submit"
           android:layout_column="2"
           android:layout_weight="4"
           android:backgroundTint="@color/light_gray"
           android:layout_marginLeft="5dp"
           android:layout_marginRight="10dp"
           style="?android:attr/buttonBarButtonStyle" />

   </LinearLayout>

</LinearLayout>