<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DestinationFragment">

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:stretchColumns="*"
        >

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            >

            <ImageView
                android:id="@+id/destination_photo"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:src="@drawable/edit_photo_image"
                android:layout_column="1" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:orientation="vertical"
                android:layout_weight=".5">

                <TextView

                    android:textStyle="bold"
                    android:layout_marginBottom="8dp"
                    android:id="@+id/tv_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="Name" />

                <TextView
                    android:id="@+id/tv_timestamp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="Timestamp" />

<!--                <RatingBar-->
<!--                    android:id="@+id/simple_rating_bar"-->
<!--                    android:layout_width="match_parent"-->
<!--                    android:layout_height="wrap_content"-->
<!--                    android:layout_gravity="left"-->
<!--                    android:numStars="5"-->
<!--                    />-->

            </LinearLayout>

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <EditText
                android:id="@+id/destination_description"
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:hint="@string/description"
                android:layout_span="2"
                android:layout_weight="1"
                android:gravity="top"/>

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/button_cancel"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:text="@string/cancel"
                android:layout_column="1"
                style="?android:attr/buttonBarButtonStyle" />

            <Button
                android:id="@+id/button_submit"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:text="@string/submit"
                android:layout_column="2"
                android:layout_weight=".5"
                android:layout_marginEnd="5dp"
                style="?android:attr/buttonBarButtonStyle" />

        </TableRow>

    </TableLayout>

</FrameLayout>